scss/_tasks.scss
@use './colors' as *;

.tasks {
    width: 95%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    background-color: $list-task-color;
    border-radius: 10px;
    gap: 1em;
    padding: 1em 0;
    .type-task {
        width: 90%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0 1em;
        margin-top: 1em;
        border-radius: 10px;
        .add-task {
            cursor: pointer;
            display: flex;
            justify-content: center;
            align-items: center;
            gap: 0.5em;
            img {
                max-width: 100%;
            }
        }
    }
    .tasks-list {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1em;
        width: 100%;
        z-index: 0;
        .task-card {
            width: 90%;
            display: flex;
            flex-direction: column;
            background-color: $card-task-color;
            border-radius: 10px;
            padding: 1em 0.2em;
            gap: 2em;
            transition: 0.5s all ;
            .head {
                display: flex;
                justify-content: space-between;
                margin: 0 1em;
                .task-name-description {
                    .heading {
                        font-size: 1.1rem;
                        margin: 0.4em 0;
                    }
                    .description {
                        color: $text-opacity;
                    }
                }
                .more-options {
                    display: flex;
                    flex-direction: column;
                    align-items: flex-end;
                    margin-top: 0.5em;
                    width: 30%;
                    transition: 0.5s all ;
                    
                    img {
                        width: 20px;
                        cursor: pointer;
                        max-width: 100%;
                    }
                    .content {
                        display: none;
                        flex-direction: column;
                        right: 0;
                        width: 160px;
                        height: fit-content;
                        z-index: 1;
                        background-color: $background-color;
                        border: 1px solid rgba($color: $primary-color, $alpha: 0.6);
                        border-radius: 4px;
                    }
                    p {
                        color: $text-color;
                    }
                    .option {
                        cursor: pointer;
                        padding: 0.3em 0.4em;
                        display: flex;
                        justify-content: flex-start;
                        gap: 0.4em;
                        border: 1px solid rgba($color: $primary-color, $alpha: 0.6);
                        max-width: 100%;
                    }
                    .completed {
                        img {
                            width: 19px;
                        }
                    }
                }
            }

        }
        .date {
            display: flex;
            align-items: center;
            justify-content: center;
            margin: 1em 0;
            padding: 0.5em;
            border-radius: 9999px;
            background-color: #36373d;
            margin: 0 1em;
        }
        
    }
}

